<resources>
    <string name="app_name">MotorApp</string>
    <string name="action_settings">Settings</string>
    <string name="textViewApp">MotorApp</string>

    <string-array name="trabajadores">
        <item>Carlos-Puesto1</item>
        <item>Miguel-Puesto2</item>
        <item>Juan-Puesto3</item>
        <item>Pedro-Puesto4</item>
        <item>Javi-Puesto5</item>
    </string-array>
    <string name="title_activity_intro_matricula">IntroMatricula</string>

    <string name="siguiente">SIGUIENTE</string>
    <string name="coche">Coche</string>
    <string name="buscarMatricula">Buscar Matrícula</string>
    <string name="matricula">Matrícula</string>
    <string name="datosCliente">DATOS CLIENTE:</string>
    <string name="nombreCliente">Nombre</string>
    <string name="apellidosCliente">Apellidos</string>
    <string name="emailCliente">E-mail</string>
    <string name="telefonoCliente">Teléfono</string>
    <string name="cocheCliente">Coche</string>
    <string name="nuevoCoche">NUEVO VEHÍCULO:</string>
    <string name="marcaCoche">Marca</string>
    <string name="modeloCoche">Modelo</string>
    <string name="numMotor">Num. Motor</string>
    <string name="trabajoCoche">Trabajo</string>
    <string name="title_activity_lista">Lista</string>
    <string name="title_activity_datos_cliente">DatosCliente</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_seleccionar_marca">SeleccionarMarca</string>
    <string name="title_activity_single_item_view">SingleItemView</string>
    <string name="owner">Mecánico</string>

    <string name="namelabel">"Name:"</string>
    <string name="title_activity_nuevo_vehiculo">NuevoVehiculo</string>
    <string name="title_activity_new_task">NewTask</string>
    <string name="detalle_tarea">Trabajos a realizar: </string>
    <string name="description">Descripcion</string>
    <string name="mecanico">Mecanico</string>
</resources>
